[tool.poetry]
name = "thunderbolt"
version = "0.0.0"  # using poetry-dynamic-versioning
description="gokart file downloader"
authors = ["vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/m3dev/thunderbolt"
repository = "https://github.com/m3dev/thunderbolt"
documentation = ""

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
gokart = "*"
boto3 = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
tox = "*"
mock = "*"
isort = "*"
yapf = "*"
toml = "*"

[tool.yapf]
based_on_style = "pep8"
column_limit = 160

[tool.isort]
line_length = 160

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
