[tool.poetry]
name = "thunderbolt"
version = "0.0.0"  # using poetry-dynamic-versioning
description="gokart file downloader"
authors = ["vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/m3dev/thunderbolt"
repository = "https://github.com/m3dev/thunderbolt"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gokart = "*"
boto3 = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
tox = "*"
mock = "*"

[tool.ruff]
line-length = 160
exclude = ["venv/*", "tox/*"]

[tool.ruff.lint]
# All the rules are listed on https://docs.astral.sh/ruff/rules/
extend-select = [
  "B", # bugbear
  "I" # isort
]

# B006: Do not use mutable data structures for argument defaults. They are created during function definition time. All calls to the function reuse this one instance of that data structure, persisting changes between them.
# B008 Do not perform function calls in argument defaults.  The call is performed only once at function definition time. All calls to your function will reuse the result of that definition-time function call.  If this is intended, assign the function call to a module-level variable and use that variable as a default value.
ignore = ["B006", "B008"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
